--- a/IoCServiceProviderWebService/IoCServiceProviderWebServicePresentation/IoCServiceProviderWebServicePresentation.csproj
+++ b/IoCServiceProviderWebService/IoCServiceProviderWebServicePresentation/IoCServiceProviderWebServicePresentation.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\CountryController.cs" />
+    <Compile Include="Controllers\CountryStatisticsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
