--- a/IoCServiceProviderWebService/IoCServiceProviderWebServicePresentation/IoCServiceProviderWebServicePresentation.csproj
+++ b/IoCServiceProviderWebService/IoCServiceProviderWebServicePresentation/IoCServiceProviderWebServicePresentation.csproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="App_Start\GlobalConfigurationDependencyResolver.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\HelpPage\ApiDescriptionExtensions.cs" />
